openshift/ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: synthetic-insight-ui
spec:
  to:
    kind: Service
    name: synthetic-insight-ui
  port:
    targetPort: http
  tls:
    termination: edge
